--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <main>
         <div>
             <p>
-                
-            </p>
+                Um dia desses, dentro de um livro da biblioteca da escola, eu descobri uma carta antiga sobre uma cidade perdida, escondida por riquezas e belezas naturais. Nessa carta, a autora deixa algumas pistas para encontrar essa cidade e eu decidi segui-las!</p>
+                <button class="">Rio de janeiro</button>
         </div>
     </main>
     
